# rust-samp

./: .gitattributes  .gitignore  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  bench-history.json  migration.md  mkdocs.yml
.github/: dependabot.yml  labels.yml  release-drafter.yml  release.yml
.github/workflows/: bench-release.yml  codeql.yml  docs.yml  labels.yml  release-drafter.yml  release.yml  rust.yml  scorecard.yml
changelog/: historical.md  index.md  v1.x.md  v2.x.md
docs/: advanced-examples.md  amx-types.md  api-reference.md  book.toml  build-scripts.md  cells-and-memory.md  diagnostics.md  encoding.md  error-handling.md  exec-public.md  first-plugin.md  index.md  logging.md  migration.md  natives.md  omp-native.md  plugin-anatomy.md  requirements.in  requirements.txt  setup.md  vm-debugging.md
docs/internals/: omp-abi.md
docs/src/: SUMMARY.md  anatomia-plugin.md  celulas-e-memoria.md  encoding.md  exemplos-avancados.md  introducao.md  logging.md  migracao.md  natives.md  primeiro-plugin.md  referencia-api.md  setup.md  tipos-amx.md  tratamento-de-erros.md
example-counter/: Cargo.toml
example-counter/src/: lib.rs
example-hello/: Cargo.toml
example-hello/src/: lib.rs
examples/: README.md
examples/advanced/: Cargo.toml  README.md
examples/advanced/src/: lib.rs
examples/counter/: Cargo.toml  README.md
examples/counter/src/: lib.rs
examples/hello/: Cargo.toml  README.md
examples/hello/src/: lib.rs
examples/sink-demo/: Cargo.toml  README.md
examples/sink-demo/src/: lib.rs
plugin-example/: Cargo.toml
plugin-example/src/: lib.rs
samp/: Cargo.toml  README.md
samp-codegen/: Cargo.toml  README.md  readme.md
samp-codegen/src/: lib.rs  native.rs  plugin.rs
samp-sdk/: Cargo.toml  README.md  readme.md
samp-sdk/benches/: buffer_bench.rs  string_bench.rs
samp-sdk/src/: amx.rs  args.rs  cell.rs  consts.rs  encoding.rs  error.rs  exports.rs  lib.rs  macros.rs  raw.rs
samp-sdk/src/cell/: buffer.rs  repr.rs  string.rs
samp-sdk/src/debug/: mod.rs  parse.rs  query.rs  types.rs
samp-sdk/src/omp/: component.rs  component_api.rs  core.rs  events.rs  mod.rs  server.rs  timers.rs  types.rs  vtable.rs
samp-sdk/src/raw/: functions.rs  types.rs
samp-sdk/src/tests/: amx_cell.rs  amx_string.rs  buffer.rs  mod.rs  omp_lifecycle.rs
samp/src/: amx.rs  interlayer.rs  lib.rs  logger.rs  macros.rs  plugin.rs  runtime.rs
scripts/: append-bench-history.py  build-bench-comment.py  build-linux.sh  build-windows.sh  extract-bench.py  render-bench-entry.py
