[workspace]
resolver = "3"
members = [
    "samp-codegen",
    "samp-sdk",
    "samp",
    "examples/hello",
    "examples/counter",
    "examples/advanced",
    "examples/sink-demo",
]

# Shared package metadata — each member inherits via `field.workspace = true`.
# Crate-specific fields (name, description, keywords, categories) stay in the
# crate's own Cargo.toml.
[workspace.package]
authors = [
    "ZOTTCE <zottce@gmail.com>",
    "NullSablex <https://github.com/NullSablex>",
]
license = "MIT"
repository = "https://github.com/NullSablex/rust-samp"
homepage = "https://github.com/NullSablex/rust-samp"
documentation = "https://rust-samp.nullsablex.com/"
edition = "2024"
rust-version = "1.88"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true