[package]
name = "plugin"
version = "1.0.0"
authors = ["ZOTTCE <zottce@gmail.com>", "NullSablex"]
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
samp = { path = "../samp", features = ["encoding"] }
memcache = { version = "0.19", default-features = false }
log = "0.4"
fern = "0.7"
