[package]
name = "samp-codegen"
version = "0.1.2"
authors = ["ZOTTCE <zottce@gmail.com>"]
description = "Codegen for samp-rs"
license = "MIT"
repository = "https://github.com/zottce/samp-rs/"
readme = "../README.md"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "fold"] }
quote = "1.0"
