[package]
name = "samp-codegen"
version = "1.1.0"
authors = ["ZOTTCE <zottce@gmail.com>", "NullSablex"]
description = "Codegen for rust-samp"
license = "MIT"
repository = "https://github.com/NullSablex/rust-samp"
readme = "../README.md"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "fold"] }
quote = "1.0"
