[package]
name = "samp-sdk"
version = "3.0.0"
authors = ["ZOTTCE <zottce@gmail.com>", "NullSablex <https://github.com/NullSablex>"]
description = "Bindings for C SA:MP SDK"
license = "MIT"
repository = "https://github.com/NullSablex/rust-samp"
readme = "../README.md"
edition = "2024"

[features]
default = []
encoding = ["encoding_rs"]
# Disables native Open Multiplayer support — the plugin runs only on SA-MP
# (still compatible with Open Multiplayer via legacy mode)
samp-only = []

[dependencies]
bitflags = "2.10"
encoding_rs = { version = "0.8", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "string_bench"
harness = false

[[bench]]
name = "buffer_bench"
harness = false

[package.metadata.docs.rs]
features = ["encoding"]
default-target = "i686-pc-windows-msvc"
