[package]
name = "rust-samp-sdk"
version = "3.1.0"
description = "Low-level FFI bindings for the SA-MP AMX virtual machine and open.mp native component ABI. Used internally by `rust-samp`; depend on it directly only if you need raw access without the higher-level macros and lifecycle."
keywords = ["samp", "open-mp", "amx", "pawn", "ffi"]
categories = ["external-ffi-bindings", "game-development"]
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "README.md"

[features]
default = []
encoding = ["encoding_rs"]
# Enables the `debug` module: an AMX_DBG debug-info parser for building
# debuggers/tooling on top of the SDK (pairs with the VM register/cell
# accessors on `Amx`). Pure logic, no extra dependencies.
debug = []
# Disables native Open Multiplayer support — the plugin runs only on SA-MP
# (still compatible with Open Multiplayer via legacy mode)
samp-only = []

[lib]
# Importable as `samp_sdk` so cross-crate and downstream code keeps using
# `use samp_sdk::...` regardless of the published package name.
name = "samp_sdk"
# Disable the default bench harness on the library target so `cargo bench`
# only runs the explicit `[[bench]]` entries below (which use criterion).
# Without this, `cargo bench` also invokes the lib's unit tests as benches,
# and `libtest` rejects criterion flags like `--save-baseline` with
# `error: Unrecognized option: 'save-baseline'`.
bench = false

[dependencies]
bitflags = "2.10"
encoding_rs = { version = "0.8", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "string_bench"
harness = false

[[bench]]
name = "buffer_bench"
harness = false

[package.metadata.docs.rs]
features = ["encoding"]
default-target = "i686-pc-windows-msvc"
