[package]
name = "samp"
version = "2.1.0"
authors = ["ZOTTCE <zottce@gmail.com>", "NullSablex"]
description = "Tools to develop SA:MP plugins"
license = "MIT"
repository = "https://github.com/NullSablex/rust-samp"
readme = "../README.md"
edition = "2024"

[features]
default = []
encoding = ["samp-sdk/encoding"]

[dependencies]
samp-sdk = { path = "../samp-sdk", version = "2.1.0" }
samp-codegen = { path = "../samp-codegen", version = "1.1.0" }
fern = "0.7"
log = "0.4"

[package.metadata.docs.rs]
features = ["encoding"]
default-target = "i686-pc-windows-msvc"
