[package]
name = "samp"
version = "3.0.0"
authors = ["ZOTTCE <zottce@gmail.com>", "NullSablex <https://github.com/NullSablex>"]
description = "Tools to develop SA:MP plugins"
license = "MIT"
repository = "https://github.com/NullSablex/rust-samp"
readme = "../README.md"
edition = "2024"

[features]
default = []
encoding = ["samp-sdk/encoding"]
# Disables native Open Multiplayer support — the plugin runs only on SA-MP
# (still compatible with Open Multiplayer via legacy mode)
samp-only = ["samp-sdk/samp-only"]

[dependencies]
samp-sdk = { path = "../samp-sdk", version = "3.0.0" }
samp-codegen = { path = "../samp-codegen", version = "1.3.0" }
fern = "0.7"
log = "0.4"

[package.metadata.docs.rs]
features = ["encoding"]
default-target = "i686-pc-windows-msvc"

[package.metadata.samp]
uid = "0x29c7c5bc76c43d5d"
