[package]
name = "advanced"
version = "1.1.1"
authors = ["ZOTTCE <zottce@gmail.com>", "NullSablex <https://github.com/NullSablex>"]
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
samp = { package = "rust-samp", path = "../../samp", features = ["encoding"] }
memcache = { version = "0.19", default-features = false }
log = "0.4"
fern = "0.7"

[package.metadata.samp]
uid = "0x68578bb99c58eb76"
